# worldview

./: Cargo.toml  LICENSE
src/: artifact.rs  camera.rs  element.rs  key.rs  loader.rs  main.rs  playback.rs  window.rs
src/inject/: inotify.rs  mod.rs  playback.rs  sequence.rs
src/injector/: inotify.rs  mod.rs  playback.rs  sequence.rs
src/model/: facet.rs  mod.rs  vertex.rs  wireframe.rs
src/pipeline/: mesh.rs  mod.rs  point_cloud.rs  wireframe.rs
src/pipeline/shader/: mesh.wsgl  plain_geometry.wsgl  point_cloud.wsgl
src/sequence/: mod.rs  replace.rs
