[package]
name = "worldview"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.2" }
env_logger = "0.10"
log = "0.4"
wgpu = "0.20"
tokio = { version = "1.38.0", features = ["full"] }
ply-rs = "0.1.3"
regex = "1.10.5"
bytemuck = { version = "1.15", features = [ "derive" ] }
itertools = "0.13.0"
cgmath = "0.18"
